--- a/source/R5T.F0045/R5T.F0045.csproj
+++ b/source/R5T.F0045/R5T.F0045.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\..\..\R5T.F0049\source\R5T.F0049\R5T.F0049.csproj" />
     <ProjectReference Include="..\..\..\R5T.F0055\source\R5T.F0055\R5T.F0055.csproj" />
     <ProjectReference Include="..\..\..\R5T.F0056\source\R5T.F0056\R5T.F0056.csproj" />
+    <ProjectReference Include="..\..\..\R5T.F0063\source\R5T.F0063\R5T.F0063.csproj" />
     <ProjectReference Include="..\..\..\R5T.NG0006\source\R5T.NG0006\R5T.NG0006.csproj" />
     <ProjectReference Include="..\..\..\R5T.T0132\source\R5T.T0132\R5T.T0132.csproj" />
   </ItemGroup>
